# Relocator

./: .gitignore  CMakeLists.txt  README.txt
.github/workflows/: build.yml
src/: Linux_Relocator.cpp  Linux_Relocator.hpp  MacOS_Relocator.cpp  MacOS_Relocator.hpp  Process.hpp  Relocator.hpp  Windows_Relocator.cpp  Windows_Relocator.hpp  main.cpp
